# patterns

Builder/underground/: CMakeLists.txt  main.cpp
Facade/bakery/: main.cpp
Flyweight/mobile/: CMakeLists.txt  main.cpp
composite/bank/: CMakeLists.txt  main.cpp
observer/food/: CMakeLists.txt  main.cpp
